--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
-  <head>
-    <title>Test</title>
-  </head>
-  <body>
-    <p>Saya cuma mau testing</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inventaris UCH UTY Creative Hub</title>
+    <link rel="icon" href="icon.png">
+</head>
+<body>
+    
+</body>
 </html>
