--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventaris UCH UTY Creative Hub</title>
-    <link rel="icon" href="icon.png">
+  <meta charset="UTF-8">
+  <title>UTY Creative Hub</title>
+  <link rel="icon" type="image/png" href="icon.png">
+  <style>
+    body { font-family: sans-serif; text-align: center; padding: 50px; }
+    img { max-width: 150px; }
+    .btn { padding: 10px 20px; background: #1976d2; color: white; border: none; border-radius: 8px; cursor: pointer; }
+  </style>
 </head>
 <body>
-    
+  <img src="logo.png" alt="UTY Creative Hub Logo">
+  <h1>Inventaris UTY Creative Hub</h1>
+  <p>Platform manajemen data inventaris UTY Creative Hub yang terhubung langsung ke Google Spreadsheet.</p>
+
+  <a href="scan.php">
+    <button class="btn">Scan Sekarang</button>
+  </a>
 </body>
 </html>
