--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Inventaris UTY Creative Hub</title>
-  <link rel="icon" href="icon.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="icon.png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container center">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="logo.png" class="logo" />
     <h1>Inventaris UTY Creative Hub</h1>
-    <p>Sistem pemantauan inventaris berbasis Google Spreadsheet</p>
-    <a href="scan.php" class="btn">Mulai Scan</a>
+    <p>Sistem inventaris berbasis Google Spreadsheet tanpa backend.</p>
+    <a href="scan.html" class="btn">Mulai Scan</a>
   </div>
 </body>
 </html>
