--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <div class="container">
       <div class="header">
         <img
-          src="logo.png"
           alt="UCH UTY Creative Hub Logo"
-          class="logo"
           loading="lazy"
+          decoding="async"
+          data-nimg="1"
+          style="color:transparent"
+          src="logo.png"
         />
         <p>Scan QR Code untuk Update Kondisi Barang Inventory</p>
       </div>
@@ -474,3 +476,4 @@
     </script>
   </body>
 </html>
+
